# rust_synth

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json
cpal-synth/: Cargo.toml
cpal-synth/benches/: oscillator_benches.rs
cpal-synth/src/: lib.rs
cpal-synth/src/synth/: audio_context.rs  audio_graph.rs  audio_node.rs  audio_param.rs  bandlimited_wavetableoscillator.rs  oscillator.rs  processor.rs
cpal-synth/tests/: oscillator_tests.rs
native/: Cargo.toml
native/src/: main.rs
web/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
web/src/: lib.rs
