[package]
name = "cpal-synth"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpal-output"]
cpal-output = ["cpal"]
web-output = []

[dependencies]
anyhow = "1.0.93"
cpal = { version = "0.15.3", optional = true }
rustfft = "6.2.0"
atomic_float = "1.1.0"
atomic = "0.5"
rayon = "1.5"
crossbeam = "0.8"
lazy_static = "1.5.0"
log = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window"
]}

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "oscillator_benches"
harness = false