[package]
name = "rust-synth-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
cpal = { version = "0.15", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
cpal-synth = { path = "../cpal-synth" }
console_error_panic_hook = "0.1.5"
anyhow = "1.0.93"
web-sys = { version = "0.3", features = [
    "console",
    "AudioContext",
    "AudioNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "Window"
]}